changed page name and fixed button spacing

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -160,8 +160,9 @@ html {
   color: white;
   border-radius: 3px;
   font-size: 15px;
-  padding: 2px 10px;
-  /* padding-top: 3px; */
+  padding: 2px 8px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .EmailButton {
